--- a/config/assets/sass/_forms.scss
+++ b/config/assets/sass/_forms.scss
@@ -91,4 +91,8 @@ fieldset {
         border-radius: 0.4em;
         width        : 14em;
     }
+
+    select {
+        padding-left: 0.35em !important;
+    }
 }
