More rotation updates

--- a/config/assets/sass/article/_special.scss
+++ b/config/assets/sass/article/_special.scss
@@ -7,6 +7,10 @@ form.rotation {
     table {
         text-align: left;
 
+        tr.highlight td {
+            background-color: #cfc;
+        }
+
         th.right,
         td.right {
             text-align: right;
