--- a/templates/pages/user/tools.html.tt
+++ b/templates/pages/user/tools.html.tt
@@ -1,4 +1,7 @@
-[% page.title = 'User Tools' %]
+[%
+    USE date;
+    page.title = 'User Tools';
+%]
 
 <h1>[% page.title %]</h1>
 
@@ -17,8 +20,13 @@
         <tr>
             <td>[% this_user.first_name %] [% this_user.last_name %]</td>
             <td><a href="mailto:[% this_user.email %]">[% this_user.email %]</a></td>
-            <td>[% this_user.phone %]</td>
-            <td>[% this_user.last_login %]</td>
+            <td>[%
+                this_user.phone.substr( 0, 3 ) _ '-' _
+                this_user.phone.substr( 3, 3 ) _ '-' _
+                this_user.phone.substr( 6, 4 )
+            %]</td>
+            <td><time datetime="[% this_user.last_login %]">[%
+                date.format( this_user.last_login, '%a, %b %-d, %Y at %-I:%M %p %Z' ) %]</time></td>
         </tr>
     [% END %]
 </table>
@@ -35,7 +43,9 @@
             <tr>
                 <td><a href="[%
                     c.url_for( '/meeting/' _ this_meeting.data.meeting_id )
-                %]">[% this_meeting.data.start %]</a></td>
+                %]"><time datetime="[% this_meeting.data.start %]">[%
+                    date.format( this_meeting.data.start, '%a, %b %-d, %Y at %-I:%M %p %Z' )
+                %]</time></a></td>
                 <td>[% ( this_meeting.is_active ) ? 'Active' : 'Scheduled' %]</td>
             </tr>
         [% END %]
@@ -60,7 +70,9 @@
             <tr>
                 <td><a href="[%
                     c.url_for( '/meeting/' _ this_meeting.meeting_id )
-                %]">[% this_meeting.start %]</a></td>
+                %]"><time datetime="[% this_meeting.start %]">[%
+                    date.format( this_meeting.start, '%a, %b %-d, %Y at %-I:%M %p %Z' )
+                %]</time></a></td>
                 <td>[% ( this_meeting.attended ) ? 'Yes' : 'No' %]</td>
             </tr>
         [% END %]
