macros template component (with time)

--- a/templates/pages/meeting/view.html.tt
+++ b/templates/pages/meeting/view.html.tt
@@ -1,13 +1,13 @@
 [%
     USE date;
+    PROCESS macros;
     page.title = 'CBQ Meeting: ' _ date.format( meeting.data.start, '%b %-d, %Y' );
 %]
 
 <h1>[% page.title %]</h1>
 
 <p>
-    <b>Start:</b> <time datetime="[% meeting.data.start %]">[%
-        date.format( meeting.data.start, '%a, %b %-d, %Y at %-I:%M %p %Z' ) %]</time><br>
+    <b>Start:</b> [% time( meeting.data.start, '%a, %b %-d, %Y at %-I:%M %p %Z' ) %]<br>
     <i>Meeting is <b>[% IF meeting.is_active %]active[% ELSE %]not active[% END %]</b>.</i>
 </p>
 
