Relocation of build and externals

--- a/config/assets/sass/_fonts.scss
+++ b/config/assets/sass/_fonts.scss
@@ -1,5 +1,5 @@
-@use '../css/fonts/poppins';
-@use '../css/fonts/material-icons';
+@use '../../../static/externals/google_fonts/css/poppins';
+@use '../../../static/externals/google_fonts/css/material-icons';
 
 :root {
     font-size: 16px;
