--- a/config/assets/sass/article/_common.scss
+++ b/config/assets/sass/article/_common.scss
@@ -36,6 +36,8 @@ article {
     img.captcha {
         border-radius: 0.5em;
         border       : 1px solid silver;
+        width        : 230px;
+        height       : 50px;
     }
 
     div.gallery {
