--- a/config/assets/sass/_header_footer.scss
+++ b/config/assets/sass/_header_footer.scss
@@ -8,24 +8,16 @@ header {
     }
 }
 
-dialog {
-    margin       : 2em auto 0 auto;
-    padding      : 1em;
-    border       : 1px solid;
-    max-width    : calc( 100vw - 6em );
-    z-index      : 100;
-    border-radius: 0.5em;
-    border-color : colors.$dark_text;
-    color        : colors.$dark_text;
-    filter       : drop-shadow( 0px 0px 0.5rem colors.$dark_text );
+dialog.memo {
+    border-color: colors.$dark_text;
+    color       : colors.$dark_text;
+    filter      : drop-shadow( 0px 0px 0.5rem colors.$dark_text );
 
-    form {
-        margin-top: 0.5em;
-        text-align: right;
+    form button {
+        background-color: white;
 
-        button {
-            margin-left     : 0.5em;
-            background-color: white;
+        &:hover {
+            border-color: colors.$dark_text !important;
         }
     }
 
