--- a/templates/components/page_layout.html.tt
+++ b/templates/components/page_layout.html.tt
@@ -10,10 +10,12 @@
 <header>
     <a href="[% c.url_for('/about_CBQ.md') %]"
         class="button colored">About CBQ</a>
-    <a href="mailto:q@cbqz.org" class="button">Contact Us
+    <a href="mailto:q@cbqz.org" class="button">Contact
         <span class="material-symbols-outlined inline">mail</span></a>
-    <a href="[% c.url_for('/slack') %]" class="button">Join Our Slack
+    <a href="[% c.url_for('/slack') %]" class="button">Join Slack
         <span class="material-symbols-outlined inline">forum</span></a>
+    <a href="[% c.url_for('/FAQs.md') %]"
+        class="button colored">FAQs</a>
 </header>
 
 <article>
