--- a/config/assets/sass/_nav.scss
+++ b/config/assets/sass/_nav.scss
@@ -37,8 +37,19 @@ nav {
         margin-bottom: $nav_secondary_size;
     }
 
+    ul > li:not( :has(ul) ) {
+        border     : none;
+        padding-top: 0;
+    }
+
     & > ul > li:first-child {
-        margin-top: 0;
+        margin-top : 0;
+    }
+
+    & > ul > li:first-child,
+    & > ul > li:last-child {
+        padding-top: $nav_primary_size;
+        border-top : 1px solid colors.$lines;
     }
 
     a {
