--- a/config/assets/sass/_logo.scss
+++ b/config/assets/sass/_logo.scss
@@ -23,7 +23,7 @@ div#logo {
     img {
         margin-top   : $logo_margin;
         margin-left  : $logo_margin;
-        margin-bottom: calc( $logo_margin / 2 );
+        margin-bottom: calc( $logo_margin / 4 * 3 );
     }
 
     img,
