--- a/config/assets/sass/_forms.scss
+++ b/config/assets/sass/_forms.scss
@@ -87,7 +87,8 @@ fieldset {
         background-color: white;
     }
 
-    input, textarea {
+    input:not([type='radio']):not([type='checkbox']),
+    textarea {
         border-radius: 0.4em;
         width        : 14em;
     }
