--- a/templates/pages/meeting/create.html.tt
+++ b/templates/pages/meeting/create.html.tt
@@ -2,7 +2,7 @@
 
 <h1>[% page.title %]</h1>
 
-<form method="post" action="[% c.url_for %]">
+<form method="post">
     <fieldset>
         <legend>Create Meeting</legend>
 
