--- a/templates/pages/user/tools.html.tt
+++ b/templates/pages/user/tools.html.tt
@@ -5,17 +5,10 @@
 
 <h1>[% page.title %]</h1>
 
-<p>
-    <a class="button colored" href="[% c.url_for( path_part_prefix _ '/user/edit' ) %]"
-        >Edit My User Account Data</a>
-</p>
+<ul>
+    [% UNLESS req_info.region %]<li><a href="[% c.url_for('/meeting/list') %]">Meetings List</a></li>[% END %]
+    <li><a href="[% c.url_for( path_part_prefix _ '/user/list' ) %]">Users List</a></li>
+    <li><a href="[% c.url_for( path_part_prefix _ '/org/list' ) %]">Team Organizations List</a></li>
+</ul>
 
-[% UNLESS req_info.region %]
-    <p>
-        <a href="[% c.url_for('/meeting/list') %]">Meetings List</a>
-    </p>
-[% END %]
-
-<p>
-    <a href="[% c.url_for( path_part_prefix _ '/user/list' ) %]">Users List</a>
-</p>
+<p><a class="button colored" href="[% c.url_for( path_part_prefix _ '/user/edit' ) %]">Edit My User Account Data</a></p>
