--- a/templates/pages/user/list.html.tt
+++ b/templates/pages/user/list.html.tt
@@ -4,7 +4,7 @@
     region_acronym = ( req_info.region ) ? req_info.region.key : 'CBQ';
     region_acronym = region_acronym | upper;
 
-    page.title = region_acronym _ ' Users List';
+    page.title = region_acronym _ ' People List';
 %]
 
 <h1>[% page.title %]</h1>
