--- a/config/assets/sass/_misc.scss
+++ b/config/assets/sass/_misc.scss
@@ -7,3 +7,14 @@ div.current_next_meet {
     border-radius   : 0.4em;
     width           : fit-content;
 }
+
+div.box {
+    background-color: colors.$background;
+    border          : 1px solid colors.$lines;
+    padding         : 0.25em 0.5em;
+    width           : fit-content;
+}
+
+.hidden {
+    display: none;
+}
