--- a/templates/components/page_layout.html.tt
+++ b/templates/components/page_layout.html.tt
@@ -16,14 +16,36 @@
 </div>
 
 <header>
-    <a href="[% c.url_for('/about_CBQ.md') %]"
-        class="button colored">About CBQ</a>
-    <a href="mailto:q@cbqz.org" class="button">Contact
-        <span class="material-symbols-outlined inline">mail</span></a>
-    <a href="[% c.url_for('/slack') %]" class="button">Slack
-        <span class="material-symbols-outlined inline">forum</span></a>
-    <a href="[% c.url_for('/FAQs.md') %]"
-        class="button colored">FAQs</a>
+    [% UNLESS user %]
+        <a href="[% c.url_for('/about_CBQ.md') %]"
+            class="button colored">About CBQ</a>
+        <a href="mailto:q@cbqz.org" class="button">Contact
+            <span class="material-symbols-outlined inline">mail</span></a>
+        <a href="[% c.url_for('/slack') %]" class="button">Slack
+            <span class="material-symbols-outlined inline">forum</span></a>
+        <a href="[% c.url_for('/FAQs.md') %]"
+            class="button colored">FAQs</a>
+    [% ELSE %]
+        <!--
+            [% IF req_info.region %]
+                <a href="[% c.url_for( path_part_prefix _ '/register' ) %]"
+                    class="button colored">Register</a>
+            [% END %]
+        -->
+
+        [% UNLESS req_info.region %]
+            <a href="[% c.url_for( '/meetings') %]" class="button colored">Meetings</a>
+        [% END %]
+
+        <a href="[% c.url_for( path_part_prefix _ '/user/list' ) %]" class="button">People
+            <span class="material-symbols-outlined inline">group</span></a>
+
+        <a href="[% c.url_for( path_part_prefix _ '/org/list' ) %]" class="button">Orgs
+            <span class="material-symbols-outlined inline">hive</span></a>
+
+        <a href="[% c.url_for('/slack') %]" class="button">Slack
+            <span class="material-symbols-outlined inline">forum</span></a>
+    [% END %]
 </header>
 
 <article>
