--- a/templates/pages/main/index.html.tt
+++ b/templates/pages/main/index.html.tt
@@ -81,7 +81,16 @@
         Bible Quizzing is a powerful ministry that claims God's promise
         that no word of God will return empty.
     </p>
-    <!-- <button>Connect to Learn More</button> -->
+</div>
+
+<div class="youtube">
+    <iframe
+        src="https://www.youtube.com/embed/4ZGv3KYFOso"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+
+    <a href="mailto:q@cbqz.org" class="button">Contact Us to Learn More
+        <span class="material-symbols-outlined inline">mail</span></a>
 </div>
 
 <div class="counts">
